# hoppscotch

./: .all-contributorsrc  .cz.toml  .deepsource.toml  .directory  .dockerignore  .editorconfig  .env.example  .envrc  .eslintignore  .eslintrc  .eslintrc.js  .firebaserc  .gitignore  .gitpod.yml  .htaccess  .huskyrc  .lintstaged  .npmrc  .nvmrc  .prettierignore  .prettierrc  .prettierrc.js  .snyk  .travis.yml  404.html  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTO_INSTRUCTIONS.md  Caddyfile  DOCKER_SETUP.md  Dockerfile  GITHUB_EXTERNSHIP.md  IMPLEMENTATION_PLAN.md  LICENSE  LOCAL_TEST_RESULTS.md  MCP_API_GUIDE.md  MCP_LOCAL_TESTING.md  MCP_TESTING.md  (+76 more)
.azure/: user-management-implementation.md
.changeset/: minimal-fix.md
.corepack-bin/: pnpm  pnpm.CMD  pnpm.ps1  pnpx  pnpx.CMD  pnpx.ps1  yarn  yarn.CMD  yarn.ps1  yarnpkg  yarnpkg.CMD  yarnpkg.ps1
.dependabot/: config.yml
.devcontainer/: devcontainer.json
.docker/: Caddyfile
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md  semantic.yml
.husky/: commit-msg  pre-commit
.runme/: config.yaml
components/: BallsFeed.vue  InputForm.vue  Login.vue  MyButton.stories.js  MyButton.vue  README.md  ace-editor.vue  autocomplete.vue  history.vue  logo.vue  modal.vue  section.vue  toggle.vue  workspace.vue
directives/: textareaAutoHeight.js  textareaAutoHeight.ts
docs/: index.html  nginx-zapro.conf
functions/: api.js  editorutils.js  fb.js  headers.js  index.js  jsonParse.js  network.js  package-lock.json  package.json  platformutils.js  postwomanTesting.js  preRequest.js  preRequest.ts  requestParams.js  store.js  templating.js  templating.ts
helpers/: GQLConnection.ts  RESTExtURLParams.ts  RequestRunner.ts  actions.ts  apollo.ts  curlparser.js  editorutils.js  fb.js  fb.js.bak  findStatusGroup.js  jsonParse.js  keybindings.ts  migrations.ts  network.js  network.js.bak  network.ts  oauth.js  openAPIParser.ts  outline.js  platformutils.js  postwomanTesting.js  postwomanTesting.ts  preRequest.js  preRequest.ts  pwa.js  requestParams.js  shortcuts.js  templating.js  templating.ts  tern.js  ternlint.js  testSnippets.js
hoppscotch-interceptor/: package.json  pnpm-lock.yaml
lang/: bn-BD.js  bn-BD.json  de-DE.js  de-DE.json  de-DE.ts  de.json  en-US.js  en-US.json  es-ES.js  es-ES.json  fa-IR.js  (+33 more)
src-tauri/: Cargo.toml
src-tauri/src/: controller.rs  error.rs  interceptor.rs  lib.rs  main.rs  model.rs  route.rs  server.rs  state.rs
src-tauri/tests/: integration_test.rs
(+658 files in other folders)
